<?xml version="1.0"?>
<package format="2">
  <name>marker_visualizer</name>
  <version>0.0.0</version>
  <description>The marker_visualizer package</description>
  <maintainer email="somin@todo.todo">somin</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>marker_visualizer_msgs</build_depend>
  <build_export_depend>marker_visualizer_msgs</build_export_depend>
  <exec_depend>marker_visualizer_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export></export>

</package>
