<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot</name>
  <version>0.0.0</version>
  <description>The mobile_robot package</description>

  <maintainer email="somin@todo.todo">somin</maintainer> 

  <license>TODO</license> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
    <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
<build_depend>tf</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>tf</build_export_depend>

<exec_depend>tf</exec_depend>
<build_depend>diff_velocity_msgs</build_depend>
<build_export_depend>diff_velocity_msgs</build_export_depend>
<exec_depend>diff_velocity_msgs</exec_depend>
</package>