<?xml version="1.0"?>
<package format="2">
  <name>multiple_topic_pkg</name>
  <version>0.0.0</version>
  <description>ROS tutorial package to learn the topic</description>
  <maintainer email="somin@todo.todo">somin</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export></export>

</package>