<?xml version="1.0"?>
<package format="2">
  <name>service_tutorial</name>
  <version>0.0.0</version>
  <description>The service_tutorials package</description>

  <maintainer email="somin@todo.todo">somin</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
